[project]
name = "analyze"
version = "0.1.0"
description = "Empirical analysis of ML classifiers"
readme = "README.md"
authors = [
    { name = "Madat Bayramov", email = "medet.bayramov22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
analyze = "analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
