[project]
name = "analyze"
version = "0.1.0"
description = "Empirical analysis of ML classifiers"
readme = "README.md"
authors = [
    { name = "Madat Bayramov", email = "medet.bayramov22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[project.scripts]
analyze = "analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports= true
